# cpptest

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  readme.md
include/: debug.h
readWordQmake/: mainwindow.cpp  mainwindow.h  mainwindow.ui  readWordQmake.pro
src/asio/: common.h  sync-client-demo.cpp  sync-client.cpp  sync-server-demo.cpp  sync-server.cpp
src/meta-programing/: convertible.cpp  is_base.cpp  is_iterable.cpp  is_trivial.cpp  is_type.cpp
src/multithreading/: BQPC.cpp  BlockQueue.hpp  async.cpp  co_fib.cpp  pc.cpp
src/util/: Clock.hpp  Timer.h  Timer.hpp  eq.h  is_iterable.h  rand.hpp
test/: macro_expr.c  prime.cpp  strcat.c  test_datetime.cpp  test_eq.cpp  test_rand.cpp  test_timeout.cpp  time.cpp  trav.cpp  variadic.cpp
